seo更新，静态页面更新完成。

--- a/templates/rendCon.html
+++ b/templates/rendCon.html
@@ -1,6 +1,12 @@
+{% extends "foreBase.html" %}
+
+{% block title %} 首页标题 {% endblock %}
+
+{% block baseContent %}
+
 
 <div class="row " style="height:300px;padding-left:15px">
-  <img class="img-responsive block-shadow" src="static/img/top1.jpg">
+  <img class="img-responsive block-shadow" src="/static/img/top5.jpg">
 </div>
 
 <br>
@@ -26,7 +32,7 @@
         </div>
         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
           <div class="panel-body">
-            <img class = "img-responsive" src="static/img/headshot4.jpg" alt="iphone">
+            <img class = "img-responsive" src="/static/img/headshot4.jpg" alt="iphone">
           </div>
         </div>
       </div>
@@ -53,11 +59,16 @@
 
 
       <div class="block-border-all" style="min-height:600px; width:100%;padding:20px;">
-          <p> 这是一个单页面记录的内容。里面的内容是超文本记录</p>
-          <p>
-            百度（Nasdaq：BIDU）是全球最大的中文搜索引擎、最大的中文网站。2000年1月由李彦宏创立于北京中关村，致力于向人们提供“简单，可依赖”的信息获取方式。“百度”二字源于中国宋朝词人辛弃疾的《青玉案·元夕》词句“众里寻他千百度”，象征着百度对中文信息检索技术的执著追求。
-            <br><img src="http://t11.baidu.com/it/u=3091876927,4220463602&fm=96">
-          </p>
+
+        <address>
+          <strong>魔法学校.</strong><br>
+          795 大街, 600号楼 <br>
+          山东省, 烟台市 264000<br>
+          <abbr title="电话">P:</abbr> (123) 456-7890
+        </address>
+
+          <iframe src="http://www.google.cn/maps/embed?pb=!1m14!1m8!1m3!1d12651.154910572879!2d121.25465115669486!3d37.560041123831276!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0xaf128d80f40e091b!2z5aSp5Zyw5bm_5Zy6!5e0!3m2!1szh-CN!2scn!4v1418525633301"
+                  width="100%" height="400" frameborder="0" style="border:0"> </iframe>
       </div>
 
 
@@ -65,5 +76,4 @@
 </div>
 
 
-
-<div ui-view></div>
+{% endblock %}
