--- a/templates/rendFou.html
+++ b/templates/rendFou.html
@@ -1,6 +1,11 @@
+{% extends "foreBase.html" %}
+
+{% block title %} 首页标题 {% endblock %}
+
+{% block baseContent %}
 
 <div class="row " style="height:300px;padding-left:15px">
-  <img class="img-responsive block-shadow" src="static/img/top1.jpg">
+  <img class="img-responsive block-shadow" src="/static/img/top3.jpg">
 </div>
 
 <br>
@@ -26,7 +31,7 @@
         </div>
         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
           <div class="panel-body">
-            <img class = "img-responsive" src="static/img/headshot4.jpg" alt="iphone">
+            <img class = "img-responsive" src="/static/img/headshot4.jpg" alt="iphone">
           </div>
         </div>
       </div>
@@ -47,23 +52,53 @@
 
   <div class="col-xs-9">
     <ol class="breadcrumb block-shadow">
-      <li><a href="#">公司</a></li>
-      <li><a href="#">公司情况</a></li>
+      <li><a href="#">产品库</a></li>
+      <li><a href="#">产品1</a></li>
     </ol>
 
+    <table class="table table-hover block-shadow">
+      <thead>
+      <tr>
+        <th>#</th>
+        <th>产品名字</th>
+        <th>产品描述</th>
+        <th>出品日期</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>产1</td>
+        <td>产品1</td>
+        <td>2012-1-2</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>产1</td>
+        <td>产品1</td>
+        <td>2012-1-2</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>产1</td>
+        <td>产品1</td>
+        <td>2012-1-2</td>
+      </tr>
+      </tbody>
+    </table>
 
-      <div class="block-border-all" style="min-height:600px; width:100%;padding:20px;">
-          <p> 这是一个单页面记录的内容。里面的内容是超文本记录</p>
-          <p>
-            百度（Nasdaq：BIDU）是全球最大的中文搜索引擎、最大的中文网站。2000年1月由李彦宏创立于北京中关村，致力于向人们提供“简单，可依赖”的信息获取方式。“百度”二字源于中国宋朝词人辛弃疾的《青玉案·元夕》词句“众里寻他千百度”，象征着百度对中文信息检索技术的执著追求。
-            <br><img src="http://t11.baidu.com/it/u=3091876927,4220463602&fm=96">
-          </p>
-      </div>
-
+    <div style="text-align: center;">
+      <ul class="pagination block-shadow">
+        <li class="disabled"><a href="#">&laquo;</a></li>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#">&raquo;</a></li>
+      </ul>
+    </div>
 
   </div>
 </div>
-
-
-
-<div ui-view></div>
+{% endblock %}
