--- a/templates/foreBase.html
+++ b/templates/foreBase.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>{% block title %} 网站标题 {% endblock %}</title>
-    <link href="static/css/bootstrap.css" rel="stylesheet">
-    <link href="static/css/main.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/main.css" rel="stylesheet">
   </head>
   <body>
 
@@ -12,9 +12,9 @@
 
   <div class="container" ng-app="blacapp">
     <div class="row">
-      <img src="static/img/logo.png" alt="logo">
+      <img src="/static/img/logo.png" alt="logo">
       <div style="float:right; padding-top: 50px;" >
-        <a href="static/acadmin.html" > login </a>
+        <a href="/static/acadmin.html" > login </a>
       </div>
     </div>
 
@@ -31,46 +31,48 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="nav-item"><a ui-sref="top">首 页</a></li>
-            <li class="nav-item"><a ui-sref="sec">公 司</a></li>
+            <li class="nav-item"><a href="/">首 页</a></li>
+            <li class="nav-item"><a href="/resec">公 司</a></li>
             <li class="dropdown nav-item">
-              <a ui-sref="fou" class="dropdown-toggle" data-toggle="dropdown">应 用<span class="caret"></span></a>
+              <a href="/rethi" class="dropdown-toggle" >应 用<span class="caret"></span></a>
               <ul class="dropdown-menu nav-menu-color" role="menu">
-                <li><a ui-sref="sec.list">应 用1</a></li>
-                <li><a ui-sref="top.list">应 用2</a></li>
-                <li><a href="#">应 用3</a></li>
-                <li><a href="#">应 用4</a></li>
-                <li><a href="#">应 用5</a></li>
+                <li><a href="/rethi/1">应 用1</a></li>
+                <li><a href="/rethi/1">应 用2</a></li>
+                <li><a href="/rethi/1">应 用3</a></li>
+                <li><a href="/rethi/1">应 用4</a></li>
+                <li><a href="/rethi/1fs">应 用5</a></li>
               </ul>
             </li>
             <li class="dropdown nav-item">
-              <a ui-sref="fou" class="dropdown-toggle" data-toggle="dropdown">案 例 <span class="caret"></span></a>
+              <a href="/refou" class="dropdown-toggle" >案 例 <span class="caret"></span></a>
               <ul class="dropdown-menu nav-menu-color" role="menu">
-                <li><a ui-sref="sec.list">案例1</a></li>
-                <li><a ui-sref="top.list">案例2</a></li>
-                <li><a href="#">案例3</a></li>
-                <li><a href="#">案例4</a></li>
-                <li><a href="#">案例5</a></li>
+                <li><a href="/refou/1/">案例1</a></li>
+                <li><a href="/refou/2/">案例2</a></li>
+                <li><a href="/refou/3/">案例3</a></li>
+                <li><a href="/refou/4/">案例4</a></li>
+                <li><a href="/refou/5/">案例5</a></li>
               </ul>
             </li>
             <li class="dropdown nav-item">
-              <a ui-sref="fiv" class="dropdown-toggle" data-toggle="dropdown">行 业 <span class="caret"></span></a>
+              <a href="/refiv" class="dropdown-toggle">行 业 <span class="caret"></span></a>
               <ul class="dropdown-menu nav-menu-color" role="menu">
-                <li><a href="#">行业1</a></li>
-                <li><a href="#">行业2</a></li>
+                <li><a href="/refiv/1">行业1</a></li>
+                <li><a href="/refiv/2">行业2</a></li>
                 <li><a href="#">行业3</a></li>
                 <li><a href="#">行业4</a></li>
                 <li><a href="#">行业5</a></li>
               </ul>
             </li>
-            <li class="nav-item"><a ui-sref="last">联系我们</a></li>
+            <li class="nav-item"><a href="/recon">联系我们</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
     </div> <!-- nva -->
 
+    <div class="max-width" style="margin-left: -15px;">
     {% block baseContent %}       {% endblock %}
+    </div>
 
     <div class="row" >
       <footer class="footer-main">
@@ -85,6 +87,6 @@
 
   </body>
 </html>
-<script src="static/js/jquery11.js"></script>
-<script src="static/js/bootstrap.js"></script>
+<script src="/static/js/jquery11.js"></script>
+<script src="/static/js/bootstrap.js"></script>
 
