--- a/templates/rendCon.html
+++ b/templates/rendCon.html
@@ -59,7 +59,7 @@
 
 
       <div class="block-border-all" style="min-height:600px; width:100%;padding:20px;">
-
+        <div>{{ contact }}</div>
         <address>
           <strong>魔法学校.</strong><br>
           795 大街, 600号楼 <br>
