seo更新。数据库字段增加中。。。

--- a/App/static/partials/acadmincolselfedit.html
+++ b/App/static/partials/acadmincolselfedit.html
@@ -8,9 +8,18 @@
       <input ng-change="nodeTitleChanged(clickNode)" ng-model="clickNode.title" class="form-control" id="nodetitle" name="nodetitle" type="text"
            placeholder="标题" required />
 
-      <input ng-change="nodeTitleChanged(clickNode)" ng-model="clickNode.ex_parm.link" class="form-control" id="nodetitle" name="nodetitle" type="text"
+      <input ng-change="nodeTitleChanged(clickNode)" ng-model="clickNode.ex_parm.link" class="form-control" id="nodetitlelink" name="nodetitlelink" type="text"
              placeholder="特殊连接" required />
 
-      <input ng-change="nodeTitleChanged(clickNode)" ng-model="clickNode.ex_parm.kind" class="form-control" id="nodetitle" name="nodetitle" type="text"
+      <input ng-change="nodeTitleChanged(clickNode)" ng-model="clickNode.ex_parm.kind" class="form-control" id="nodetitlekind" name="nodetitlekind" type="text"
              placeholder="类型" required />
+
+      <input ng-change="nodeTitleChanged(clickNode)" ng-model="clickNode.ex_parm.exorder" class="form-control" id="nodeexorder" name="nodeexorder" type="text"
+             placeholder="序号" required />
+      <input ng-change="nodeTitleChanged(clickNode)" ng-model="clickNode.ex_parm.extitle" class="form-control" id="nodeextitle" name="nodeextitle" type="text"
+             placeholder="外部标题" required />
+      <input ng-change="nodeTitleChanged(clickNode)" ng-model="clickNode.ex_parm.exlink" class="form-control" id="nodeexlink" name="nodeexlink" type="text"
+             placeholder="外部链接" required />
+      <input ng-change="nodeTitleChanged(clickNode)" ng-model="clickNode.ex_parm.exkind" class="form-control" id="nodeexkind" name="nodeexkind" type="text"
+             placeholder="外部类型" required />
     </form>
