--- a/App/static/partials/acadminlistuser.html
+++ b/App/static/partials/acadminlistuser.html
@@ -21,7 +21,7 @@
         <tr  ng-repeat='ctListItem in contentList' >
           <td>{{$index + 1}}</td>
           <td><a href="" > {{ctListItem.username}} </a></td>
-          <td> <button ng-click="deleteRec(ctListItem.username)" type="button" class="btn btn-info btn-xs">删</button></td>
+          <td> <button ng-click="wrapConfirm('确认删除用户:' + ctListItem.username, deleteRec, ctListItem.username)" type="button" class="btn btn-info btn-xs">删</button></td>
         </tr>
       </tbody>
     </table>
