--- a/App/static/partials/acadminlistuser.html
+++ b/App/static/partials/acadminlistuser.html
@@ -21,6 +21,7 @@
         <tr  ng-repeat='ctListItem in contentList' >
           <td>{{$index + 1}}</td>
           <td><a href="" > {{ctListItem.username}} </a></td>
+          <td><a href="" > {{ctListItem.usertype}} </a></td>
           <td> <button ng-click="wrapConfirm('确认删除用户:' + ctListItem.username, deleteRec, ctListItem.username)" type="button" class="btn btn-info btn-xs">删</button></td>
         </tr>
       </tbody>
@@ -54,6 +55,8 @@
                    class="form-control"  placeholder="用户名" required >
             <input ng-model="singleRec.pw" class="form-control" id="txtWord" name="txtWord" type="text"
                    placeholder="密码" required />
+            <input ng-model="singleRec.usertype" class="form-control" id="txtType" name="txtType" type="text"
+                   placeholder="类型" required />
           </div>
         </form>
 
