--- a/App/static/partials/login.html
+++ b/App/static/partials/login.html
@@ -10,7 +10,7 @@
         <input ng-model="lUser.username" class="form-control" type="text" name="txtUser"
                class="form-control"  placeholder="用户名" required >
         <input ng-model="lUser.pw" class="form-control" id="txtPw" name="txtPw" type="password"
-               placeholder="密码" required />
+               placeholder="密码2" required />
       </div>
       <label  class="checkbox">
         <input ng-model="lUser.rem" name="chbRem" id="chbRem" type="checkbox" /> 记住密码
