2015/3/2 bugfix 一、后台管理 1.登陆界面，ie下 记住密码 没有地方挑钩  -- 飞到最前面了。。。研究中。 2.内容编辑 后面的 全部展开 没有反应  --  全部展开的意思，是里面的树全展开。 3.ie下 ueditor控件单图上传 浏览器死掉了 文件已上传成功。 -- 这个你研究一下。 4.内容编辑 右侧信息发布 点击标题没有反应 如不关联修改功能去掉链接。-- 回头增加一个浏览的功能。 5.编辑信息 最上面用title代替id -- 去掉了，title有自己的栏目。 6.系统名称改成 悦库  -- over 7.分页提供刷新功能   -- 直接f5就行。 8.用户管理 新增用户 用户名重复 没有提示信息 -- 牵扯到分页，直接提交失败。 9.栏目编辑 浏览 有什么用  --  系统设置和栏目编辑是提供admin用的。用户不能自己增加用户和编辑栏目。 10.栏目编辑 全部展开 没有反应. -- 先要reset出来数据。防止乱编辑。

--- a/App/static/partials/acadminleft.html
+++ b/App/static/partials/acadminleft.html
@@ -36,7 +36,7 @@
           </div>
         </div>
 
-        <div class="panel panel-default">
+        <div ng-show="isAdmin" class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
               <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="./#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -47,13 +47,13 @@
           <div id="collapseThree" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingThree">
             <div class="panel-body">
               <ul class="nav nav-sidebar" >
-              <li><a ui-sref="acadmin.user">用户管理2</a></li>
+              <li><a ui-sref="acadmin.user">用户管理</a></li>
             </ul>
             </div>
           </div>
         </div>
 
-        <div class="panel panel-default">
+        <div ng-show="isAdmin" class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
               <a data-toggle="collapse" data-parent="#accordion" href="./#collapseOne" aria-expanded="false" aria-controls="collapseOne">
