--- a/App/static/partials/acadminlistart.html
+++ b/App/static/partials/acadminlistart.html
@@ -49,8 +49,7 @@
           <h4 class="modal-title" id="myModalLabel">编辑信息</h4>
         </div>
         <div class="modal-body">
-          {{ singArticle.id }} --
-          {{ singArticle.parent_id }}
+
           <form class="form-horizontal" role="form">
             <div class="form-group">
               <label for="inputTitle" class="col-sm-2 control-label">标题：</label>
@@ -63,7 +62,7 @@
               <label for="inputContent" class="col-sm-2 control-label">内容：</label>
               <div class="col-sm-10">
                 <script id="uEditor" type="text/plain" style="width:100%;height:200px;"></script>
-                <textarea ng-model="singArticle.content" id="inputContent" class="form-control" rows="1"></textarea>
+                <textarea ng-show="false" ng-model="singArticle.content" id="inputContent" class="form-control" rows="1"></textarea>
               </div>
             </div>
 
