--- a/templates/foreBase.html
+++ b/templates/foreBase.html
@@ -34,7 +34,7 @@
             <li class="nav-item"><a href="/">首 页</a></li>
             <li class="nav-item"><a href="/resec">公 司</a></li>
             <li class="dropdown nav-item">
-              <a href="/rethi" class="dropdown-toggle" >应 用<span class="caret"></span></a>
+              <a href="/rethi" class="dropdown-toggle"   data-toggle="dropdown">应 用<span class="caret"></span></a>
               <ul class="dropdown-menu nav-menu-color" role="menu">
                 <li><a href="/rethi/1">应 用1</a></li>
                 <li><a href="/rethi/1">应 用2</a></li>
@@ -44,7 +44,7 @@
               </ul>
             </li>
             <li class="dropdown nav-item">
-              <a href="/refou" class="dropdown-toggle" >案 例 <span class="caret"></span></a>
+              <a href="/refou" class="dropdown-toggle"  data-toggle="dropdown">案 例 <span class="caret"></span></a>
               <ul class="dropdown-menu nav-menu-color" role="menu">
                 <li><a href="/refou/1/">案例1</a></li>
                 <li><a href="/refou/2/">案例2</a></li>
@@ -54,7 +54,7 @@
               </ul>
             </li>
             <li class="dropdown nav-item">
-              <a href="/refiv" class="dropdown-toggle">行 业 <span class="caret"></span></a>
+              <a href="/refiv" class="dropdown-toggle"   data-toggle="dropdown">行 业 <span class="caret"></span></a>
               <ul class="dropdown-menu nav-menu-color" role="menu">
                 <li><a href="/refiv/1">行业1</a></li>
                 <li><a href="/refiv/2">行业2</a></li>
