--- a/templates/rendSec.html
+++ b/templates/rendSec.html
@@ -58,7 +58,7 @@
     </ol>
 
 
-      <div class="block-border-all" style="min-height:600px; width:100%;padding:20px;">
+      <div class="block-border-all block-shadow" style="min-height:600px; width:100%;padding:20px;">
 
           <p>{{ corpInfo.content | safe }}</p>
 
