通用模板系统雏形，完成公司简介和资质。

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,30 +18,14 @@
 
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <a href="#/sec"><img src="static/img/top1.jpg" alt="苍茫"></a>
+        {% for showCase in showCaseList %}
+        <div class="item {% if forloop.first %} active {% endif %}">
+          <a href="{{ showCase.link }}"><img src="{{ showCase.exlink }}"></a>
           <div class="carousel-caption">
-            苍茫
+            {{ showCase.title }}
           </div>
         </div>
-        <div class="item">
-          <img src="static/img/top2.jpg" alt="相互">
-          <div class="carousel-caption">
-            相互
-          </div>
-        </div>
-        <div class="item">
-          <img src="static/img/top3.jpg" alt="散落">
-          <div class="carousel-caption">
-            散落
-          </div>
-        </div>
-        <div class="item">
-          <img src="static/img/top4.jpg" alt="凝视">
-          <div class="carousel-caption">
-            凝视
-          </div>
-        </div>
+        {% endfor %}
       </div>
 
       <!-- Controls -->
