--- a/templates/foreBase.html
+++ b/templates/foreBase.html
@@ -5,6 +5,12 @@
     <title>{% block title %} 网站标题 {% endblock %}</title>
     <link href="/static/css/bootstrap.css" rel="stylesheet">
     <link href="/static/css/main.css" rel="stylesheet">
+    <style>
+      .bc-menulist {
+        text-align:center;
+        letter-spacing:2px;
+      }
+    </style>
   </head>
   <body>
 
@@ -32,37 +38,38 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="nav-item"><a href="/">首 页</a></li>
-            <li class="nav-item"><a href="/resec">公 司</a></li>
+            <li class="dropdown nav-item">
+              <a href="/resec" class="dropdown-toggle"  data-toggle="dropdown"> 公 司 <span class="caret"></span></a>
+              <ul class="dropdown-menu nav-menu-color" role="menu">
+                <li class="bc-menulist"><a href="/resec/1/">公司简介 </a></li>
+                <li class="bc-menulist"><a href="/resec/2/">资质荣誉 </a></li>
+                <li class="bc-menulist"><a href="/resec/3/">企业动态 </a></li>
+                <li class="bc-menulist"><a href="/resec/4/">行业新闻 </a></li>
+              </ul>
+            </li>
+
             <li class="dropdown nav-item">
               <a href="/rethi" class="dropdown-toggle"   data-toggle="dropdown">应 用<span class="caret"></span></a>
               <ul class="dropdown-menu nav-menu-color" role="menu">
-                <li><a href="/rethi/1">应 用1</a></li>
-                <li><a href="/rethi/1">应 用2</a></li>
-                <li><a href="/rethi/1">应 用3</a></li>
-                <li><a href="/rethi/1">应 用4</a></li>
-                <li><a href="/rethi/1fs">应 用5</a></li>
-              </ul>
-            </li>
-            <li class="dropdown nav-item">
-              <a href="/refou" class="dropdown-toggle"  data-toggle="dropdown">案 例 <span class="caret"></span></a>
-              <ul class="dropdown-menu nav-menu-color" role="menu">
-                <li><a href="/refou/1/">案例1</a></li>
-                <li><a href="/refou/2/">案例2</a></li>
-                <li><a href="/refou/3/">案例3</a></li>
-                <li><a href="/refou/4/">案例4</a></li>
-                <li><a href="/refou/5/">案例5</a></li>
+                <li class="bc-menulist"><a href="/rethi/1">应用1 &nbsp;</a></li>
+                <li class="bc-menulist"><a href="/rethi/1">应用2 &nbsp;</a></li>
+                <li class="bc-menulist"><a href="/rethi/1">应用3 &nbsp;</a></li>
+                <li class="bc-menulist"><a href="/rethi/1">应用4 &nbsp;</a></li>
+                <li class="bc-menulist"><a href="/rethi/1fs">应用5 &nbsp;</a></li>
               </ul>
             </li>
             <li class="dropdown nav-item">
               <a href="/refiv" class="dropdown-toggle"   data-toggle="dropdown">行 业 <span class="caret"></span></a>
               <ul class="dropdown-menu nav-menu-color" role="menu">
-                <li><a href="/refiv/1">行业1</a></li>
-                <li><a href="/refiv/2">行业2</a></li>
-                <li><a href="#">行业3</a></li>
-                <li><a href="#">行业4</a></li>
-                <li><a href="#">行业5</a></li>
+                <li class="bc-menulist"><a href="/refiv/1">行业1&nbsp;&nbsp;&nbsp; </a></li>
+                <li class="bc-menulist"><a href="/refiv/2">行业2&nbsp;&nbsp;&nbsp; </a></li>
+                <li class="bc-menulist"><a href="#">行业3&nbsp;&nbsp;&nbsp; </a></li>
+                <li class="bc-menulist"><a href="#">行业4&nbsp;&nbsp;&nbsp; </a></li>
+                <li class="bc-menulist"><a href="#">行业5&nbsp;&nbsp;&nbsp; </a></li>
               </ul>
             </li>
+            <li class="nav-item"><a href="/refou">典型客户</a></li>
+
             <li class="nav-item"><a href="/recon">联系我们</a></li>
           </ul>
         </div><!--/.nav-collapse -->
