--- a/App/static/partials/acadminlistart.html
+++ b/App/static/partials/acadminlistart.html
@@ -46,7 +46,14 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">编辑信息</h4>
+          <h4 class="modal-title" id="myModalLabel">编辑信息
+            <div style="float:right;">
+              <button type="button" ng-click="saveArticle()" class="btn btn-primary">保存</button>
+              <button type="button" ng-click="wrapConfirm('确认删除么？', deleteArticle)"  class="btn btn-danger">删除</button>
+              <button type="button" ng-click="wrapConfirm('确认关闭么？', closeArticle)" class="btn btn-default" > 关闭 </button>
+              &nbsp; &nbsp;
+            </div>
+          </h4>
         </div>
         <div class="modal-body">
 
@@ -63,6 +70,13 @@
               <div class="col-sm-10">
                 <script id="uEditor" type="text/plain" style="width:100%;height:200px;"></script>
                 <textarea ng-show="false" ng-model="singArticle.content" id="inputContent" class="form-control" rows="1"></textarea>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label for="inputContent" class="col-sm-2 control-label">备注：</label>
+              <div class="col-sm-10">
+                <textarea ng-model="singArticle.remark" id="inputRemark" class="form-control" rows="2"></textarea>
               </div>
             </div>
 
@@ -105,12 +119,6 @@
             </div>
           </form>
 
-        <div class="modal-footer">
-
-          <button type="button" ng-click="saveArticle()" class="btn btn-primary">保存</button>
-          <button type="button" ng-click="wrapConfirm('确认删除么？', deleteArticle)"  class="btn btn-danger">删除</button>
-          <button type="button" ng-click="closeArticle()" class="btn btn-default" > 关闭 </button>
-        </div>
       </div>
       </div>
     </div>
