--- a/templates/rendSec-list.html
+++ b/templates/rendSec-list.html
@@ -16,9 +16,9 @@
             <a href="#" class="thumbnail">
               <img src="{{ iListItem.imglink }}" alt="Generic placeholder thumbnail">
             </a>
-            {{ iListItem.content }}
+            {{ iListItem.title }}
             <br>
-            <a href="{{ iListItem.link }}" type="button" class="btn btn-primary btn-xs">
+            <a href="{% if iListItem.link %} {{ iListItem.link }} {% else %}?reqid={{ iListItem.id }}{% endif %}" type="button" class="btn btn-primary btn-xs">
               <i class="glyphicon glyphicon-forward"></i> 详细信息
             </a>
           </div>
