通用模板系统雏形，除首页外全部更改完毕。

--- a/templates/foreBase.html
+++ b/templates/foreBase.html
@@ -49,23 +49,23 @@
             </li>
 
             <li class="dropdown nav-item">
-              <a href="/rethi" class="dropdown-toggle"   data-toggle="dropdown">应 用<span class="caret"></span></a>
+              <a href="/rethi" class="dropdown-toggle"   data-toggle="dropdown">产 品<span class="caret"></span></a>
               <ul class="dropdown-menu nav-menu-color" role="menu">
-                <li class="bc-menulist"><a href="/rethi/1">应用1 &nbsp;</a></li>
-                <li class="bc-menulist"><a href="/rethi/1">应用2 &nbsp;</a></li>
-                <li class="bc-menulist"><a href="/rethi/1">应用3 &nbsp;</a></li>
-                <li class="bc-menulist"><a href="/rethi/1">应用4 &nbsp;</a></li>
-                <li class="bc-menulist"><a href="/rethi/1fs">应用5 &nbsp;</a></li>
+                <li class="bc-menulist"><a href="/rethi/1">产品应用1 &nbsp;</a></li>
+                <li class="bc-menulist"><a href="/rethi/2">产品应用2 &nbsp;</a></li>
+                <li class="bc-menulist"><a href="/rethi/3">产品应用3 &nbsp;</a></li>
+                <li class="bc-menulist"><a href="/rethi/4">产品应用4 &nbsp;</a></li>
+                <li class="bc-menulist"><a href="/rethi/5">产品应用5 &nbsp;</a></li>
               </ul>
             </li>
             <li class="dropdown nav-item">
-              <a href="/refiv" class="dropdown-toggle"   data-toggle="dropdown">行 业 <span class="caret"></span></a>
+              <a href="/refiv" class="dropdown-toggle"   data-toggle="dropdown">行 业<span class="caret"></span></a>
               <ul class="dropdown-menu nav-menu-color" role="menu">
-                <li class="bc-menulist"><a href="/refiv/1">行业1&nbsp;&nbsp;&nbsp; </a></li>
-                <li class="bc-menulist"><a href="/refiv/2">行业2&nbsp;&nbsp;&nbsp; </a></li>
-                <li class="bc-menulist"><a href="#">行业3&nbsp;&nbsp;&nbsp; </a></li>
-                <li class="bc-menulist"><a href="#">行业4&nbsp;&nbsp;&nbsp; </a></li>
-                <li class="bc-menulist"><a href="#">行业5&nbsp;&nbsp;&nbsp; </a></li>
+                <li class="bc-menulist"><a href="/refiv/1">行业应用1&nbsp;&nbsp;&nbsp; </a></li>
+                <li class="bc-menulist"><a href="/refiv/2">行业应用2&nbsp;&nbsp;&nbsp; </a></li>
+                <li class="bc-menulist"><a href="/refiv/3">行业应用3&nbsp;&nbsp;&nbsp; </a></li>
+                <li class="bc-menulist"><a href="/refiv/4">行业应用4&nbsp;&nbsp;&nbsp; </a></li>
+                <li class="bc-menulist"><a href="/refiv/5">行业应用5&nbsp;&nbsp;&nbsp; </a></li>
               </ul>
             </li>
             <li class="nav-item"><a href="/refou">典型客户</a></li>
