--- a/templates/rendFrame-grid3.html
+++ b/templates/rendFrame-grid3.html
@@ -1,5 +1,4 @@
-{% extends "rendSec.html" %}
-
+{% extends "rendFrame.html" %}
 {% block cornerContent %}
 
     <ol class="breadcrumb block-shadow">
@@ -8,22 +7,25 @@
       {% endfor %}
     </ol>
 
-    <div class="block-border-all block-shadow" style="min-height:400px; width:100%;padding:20px;">
 
-      {% for iListItem in renderVal.contList %}
+    <div class="block-border-all block-shadow" style="min-height:400px; width:100%;padding:20px;">
+    {% for iListItem in renderVal.contList %}
         {% cycle '<div class="row">' '' '' %}
           <div class="col-xs-4  block-center" style="padding:5px;">
             <a href="#" class="thumbnail">
               <img src="{{ iListItem.imglink }}" alt="Generic placeholder thumbnail">
             </a>
-            {{ iListItem.title }}
+            {{ iListItem.remark }}
             <br>
+
             <a href="{% if iListItem.link %} {{ iListItem.link }} {% else %}?reqid={{ iListItem.id }}{% endif %}" type="button" class="btn btn-primary btn-xs">
               <i class="glyphicon glyphicon-forward"></i> 详细信息
             </a>
+
           </div>
         {% cycle  '' ''  '</div>' %}
-      {% endfor %}
+    {% endfor %}
     </div>
+
 
 {% endblock %}
