--- a/templates/rendFrame.html
+++ b/templates/rendFrame.html
@@ -6,7 +6,7 @@
 
 
 <div class="row " style="height:300px;padding-left:15px">
-  <img class="img-responsive block-shadow" src="/static/img/top1.jpg">
+  <img class="img-responsive block-shadow" src="{{ renderVal.boardPic }}">
 </div>
 
 <br>
