通用模板系统雏形，除首页外全部更改完毕。bugfix 0.1

--- a/App/static/partials/acadminlistart.html
+++ b/App/static/partials/acadminlistart.html
@@ -68,10 +68,10 @@
             <div class="form-group">
               <label for="inputContent" class="col-sm-2 control-label">内容：</label>
               <div class="col-sm-10">
-                <script id="uEditor" type="text/plain" style="width:100%;height:200px;"></script>
-                <textarea ng-show="false" ng-model="singArticle.content" id="inputContent" class="form-control" rows="1"></textarea>
+                <textarea id="uEditor" type="text/plain" style="width:100%;height:200px;"></textarea>
               </div>
             </div>
+            <textarea ng-show="false" ng-model="singArticle.content" id="inputContent" class="form-control" rows="1"></textarea>
 
             <div class="form-group">
               <label for="inputContent" class="col-sm-2 control-label">备注：</label>
@@ -105,13 +105,13 @@
                 <input ng-model="singArticle.exorder" type="text" class="form-control" id="inputExorder" placeholder="0">
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group" ng-hide="true">
               <label for="inputExlink" class="col-sm-2 control-label">扩展链接</label>
               <div class="col-sm-10">
                 <input ng-model="singArticle.exlink" type="text" class="form-control" id="inputExlink" placeholder="扩展链接">
               </div>
             </div>
-            <div class="form-group" >
+            <div class="form-group"  ng-hide="true">
               <label for="inputExkind" class="col-sm-2 control-label">扩展类型</label>
               <div class="col-sm-10">
                 <input ng-model="singArticle.exkind" type="text" class="form-control" id="inputExkind" placeholder="扩展类型">
