--- a/templates/rendFrame-grid3.html
+++ b/templates/rendFrame-grid3.html
@@ -24,6 +24,8 @@
 
           </div>
         {% cycle  '' ''  '</div>' %}
+    {% empty %}
+      <p><span> 嘿！暂时没有数据，过段时间再来看看吧。 </span></p> &nbsp;
     {% endfor %}
     </div>
 
