--- a/templates/foreBase.html
+++ b/templates/foreBase.html
@@ -2,6 +2,8 @@
 <html ng-app="blacapp" ng-controller="angIndex">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="山东鼎成卫星导航定位技术有限公司 北斗 GPS 卫星 导航 定位 形变 检测 " />
+    <meta name="keywords" content="山东鼎成卫星导航定位技术有限公司 北斗 GPS 卫星 导航 定位 形变 检测 " />
     <title>{% block title %} 网站标题 {% endblock %}</title>
     <link href="/static/css/bootstrap.css" rel="stylesheet">
     <link href="/static/css/main.css" rel="stylesheet">
