完成首页数据库定制功能。实现的比较死板。期待新的机制。

--- a/App/static/partials/acadmincolselfedit.html
+++ b/App/static/partials/acadmincolselfedit.html
@@ -58,6 +58,14 @@
              placeholder="扩展类型" required />
         </div>
       </div>
+      <div class="form-group">
+        <label class="col-md-2 control-label "> <h5> 备注 </h5>  </label>
+        <div class="col-md-10">
+          <textarea  rows="2" ng-change="nodeTitleChanged(clickNode)" ng-model="clickNode.remark" class="form-control" id="noderemark" name="noderemark" type="text"
+             placeholder="扩展类型" required />
+
+        </div>
+      </div>
 
 
     </form>
