--- a/templates/home.html
+++ b/templates/home.html
@@ -44,89 +44,68 @@
 <div class="row " style="margin-top: 10px;">
   <div class="col-xs-8">
 
-    <div class="col-xs-6 topgrey-background" style="padding-top: 10px;">
-      <div class="block block-light block-center block-shadow border-allthick">
-        <h4 class="heading-primary"> 安全保证 </h4>
-        <img class="img-thumbnail" src="static/img/device-imac.jpg">
-        <p> 充分搞定很好的安全保证。</p>
+    {% for iGridItem in gridShowList %}
+    {% if forloop.counter < 3 %}
+      <div class="col-xs-6 topgrey-background" style="padding-top: 10px;">
+        <div class="block block-light block-center block-shadow border-allthick">
+          <h4 class="heading-primary"><a href="{{ iGridItem.link }}"> {{ iGridItem.title }} </a> </h4>
+          <a href="{{ iGridItem.link }}"><img class="img-thumbnail" src="{{ iGridItem.exlink }}"></a>
+          <p> {{ iGridItem.remark|safe }}</p>
+        </div>
       </div>
-    </div>
+    {% else %}
+      {% if forloop.counter == 2 %} <div class="col-xs-12" style="background-color: white; height:5px;"> &nbsp; </div>
+      {% endif %}
 
-    <div class="col-xs-6 topgrey-background"  style="padding-top: 10px;">
-      <div class="block block-light block-center block-shadow border-allthick">
-        <h4 class="heading-primary"> 数据案例 </h4>
-        <img class="img-thumbnail" src="static/img/device-imac.jpg">
-        <p> 很多数据支持的案例列表</p>
+      <div class="col-xs-4 topgrey-background"  style="padding-top: 10px;">
+        <div class="block block-light border-allthick block-center block-shadow">
+          <a href="{{ iGridItem.link }}"><img src="{{ iGridItem.exlink }}" style="width:150px;height:120px;margin-bottom: 15px;"
+               class="pull-left img-circle img-responsive"></a>
+          <p> {{ iGridItem.remark|safe }} </p>
+        </div>
       </div>
-    </div>
 
-
-    <div class="col-xs-12" style="background-color: white; height:5px;"> &nbsp; </div>
-
-    <div class="col-xs-4 topgrey-background"  style="padding-top: 10px;">
-      <div class="block block-light border-allthick block-center block-shadow">
-        <img src="static/img/headshot1.jpg" style="width:150px;height:120px;margin-bottom: 15px;"
-             class="pull-left img-circle img-responsive">
-
-        <p> 上海大学博士生导师</p>
-        <p> xxx</p>
-      </div>
-    </div>
-
-    <div class="col-xs-4 topgrey-background"  style="padding-top: 10px;">
-      <div class="block block-light border-allthick block-center block-shadow">
-        <img src="static/img/headshot2.jpg" style="width:150px;height:120px;margin-bottom: 15px;"
-             class="pull-left img-circle img-responsive">
-
-        <p> 上海大学博士生导师</p>
-        <p> xxx</p>
-      </div>
-    </div>
-
-    <div class="col-xs-4 topgrey-background"  style="padding-top: 10px;">
-      <div class="block block-light border-allthick block-center block-shadow">
-        <img src="static/img/headshot3.jpg" style="width:150px;height:120px;margin-bottom: 15px;"
-             class="pull-left img-circle img-responsive">
-
-        <p> 上海大学博士生导师</p>
-        <p> xxx</p>
-      </div>
-    </div>
+    {% endif %}
+    {% endfor %}
 
   </div>
 
   <div class="col-xs-4" style="padding-top:8px;">
     <div class="tab tab-primary border-all block-shadow" role="tabpanel" style="min-height: 190px;">
       <ul id="myTab" class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active" ><a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">公司新闻</a></li>
-        <li role="presentation"  ><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile">行业动态</a></li>
-        <li role="presentation"  ><a href="#contact" role="tab" id="contact-tab" data-toggle="tab" aria-controls="contact">联系方式</a></li>
-
+        <li role="presentation" class="active" ><a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">{{ rightBarList.0.title }}</a></li>
+        <li role="presentation"><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile">{{ rightBarList.1.title }}</a></li>
+        <li role="presentation"><a href="#contact" role="tab" id="contact-tab" data-toggle="tab" aria-controls="contact">{{ rightBarList.2.title }}</a></li>
       </ul>
+
       <div id="myTabContent" class="tab-content" style="padding: 20px;border-top:1px solid lightgrey;">
         <div role="tabpanel" class="tab-pane fade in active" id="home" aria-labelledby="home-tab">
           <ul class="list list-feature" style="padding-top: -5px; font-size: 85%; line-height: 1.5em;">
-            <li style="height:26px;"> <i class="glyphicon glyphicon-ok primary-color"></i> <span> 【应用1】text.111. </span> </li>
-            <li style="height:26px;"> <i class="glyphicon glyphicon-ok primary-color"></i> <span> 【应用1】text.311. </span> </li>
-            <li style="height:26px;"> <i class="glyphicon glyphicon-ok primary-color"></i> <span> 【应用1】text.222. </span> </li>
-            <li style="height:26px;"> <i class="glyphicon glyphicon-ok primary-color"></i> <span> 【应用1】text.333. </span> </li>
+            {% for barGet1List in rightBarGet1List %}
+            <li style="height:26px;"> <i class="glyphicon glyphicon-ok primary-color"></i> <span>
+              <a href ="{{  rightBarList.0.link }}?reqid={{ barGet1List.id }}">{{ barGet1List.title }}</a> </span> </li>
+            {% endfor %}
+
           </ul>
 
         </div>
         <div role="tabpanel" class="tab-pane fade" id="profile" aria-labelledby="profile-tab">
-          <p>  学院全体技术人员提供技术支持 </p>
+          {% for barGet2List in rightBarGet2List %}
+            <li style="height:26px;"> <i class="glyphicon glyphicon-ok primary-color"></i> <span>
+              <a href ="{{  rightBarList.1.link }}?reqid={{ barGet2List.id }}">{{ barGet2List.title }}</a> </span> </li>
+            {% endfor %}
         </div>
 
         <div role="tabpanel" class="tab-pane fade" id="contact" aria-labelledby="profile-tab">
-          <p>  400-12345 </p>
+          <p> {{ rightBarList.2.remark|safe }} </p>
         </div>
       </div>
     </div>
     <br>
     <div class="block block-primary-head no-pad border-allthick block-shadow block-light">
-      <h5><i class="glyphicon glyphicon-play-circle color-primary"> </i> 功能演示 </h5>
+      <h5><i class="glyphicon glyphicon-play-circle color-primary"> </i> {{ rightBarList.3.title }} </h5>
       <div class="block-content">
-        <iframe width="272" height="172" src="http://www.tudou.com/programs/view/html5embed.action?type=0&code=3HGtLUN0A_s&lcode=&resourceId=0_06_05_99"></iframe>
+        <iframe width="272" height="172" src="{{ rightBarList.3.exlink }}"></iframe>
       </div>
     </div>
   </div>
