--- a/App/static/partials/acadminlistart.html
+++ b/App/static/partials/acadminlistart.html
@@ -19,7 +19,7 @@
       <tbody>
         <tr  ng-repeat='ctListItem in contentList' >
           <td>{{$index + 1}}</td>
-          <td><a href="" > {{ctListItem.title}} </a></td>
+          <td><a target="_black" href="{{ linkPrefix }}?reqid={{ ctListItem.id }}" > {{ctListItem.title}} </a></td>
           <td>{{ctListItem.recname}}</td>
           <td>{{ctListItem.rectime}}</td>
           <td> <button ng-click="editArticle(ctListItem.id)" type="button" class="btn btn-info btn-xs">改</button></td>
