--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "foreBase.html" %}
 
-{% block title %} 首页标题 {% endblock %}
+{% block title %} 山东鼎成卫星导航定位技术有限公司 {% endblock %}
 
 {% block baseContent %}
 
