网站搔一搔参数设置。

--- a/templates/rendFrame.html
+++ b/templates/rendFrame.html
@@ -29,24 +29,24 @@
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingOne">
           <a data-toggle="collapse" data-parent="#accordion" href="sec/#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          <span class="em-primary" style="color:white;font-size: 12px;"> 微信公众号 </span>
+          <span class="em-primary" style="color:white;font-size: 12px;"> 扫一扫 </span>
         </a>
         </div>
         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
           <div class="panel-body">
-            <img class = "img-responsive" src="/static/img/headshot4.jpg" alt="iphone">
+            <img class = "img-responsive" src="{{ renderVal.scanimg }}" alt="iphone">
           </div>
         </div>
       </div>
       <div class="panel">
         <div class="panel-heading" role="tab" id="headingTwo">
             <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="sec/#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              <span style="color:white;font-size: 12px;"> 即将实现 </span>
+              <span style="color:white;font-size: 12px;"> 公司文化 </span>
             </a>
         </div>
         <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
           <div class="panel-body">
-            承接国家新兴产业创业投资引导基金，创新引领科技，为美好明天努力耕耘！
+            创新引领科技，为美好明天努力耕耘！
           </div>
         </div>
       </div>
